# regr

./: dune-project  lib_rewriting.opam  regr.opam
lib/: .merlin  dune  exec.ml  kernel.ml  pattern.ml  regr.ml  rewrite.ml  rules.ml  sampler.ml  signature.ml  state_space.ml  term.ml
lib_rewriting/: .merlin  custom_weak.ml  path.ml  rewrite.ml  term.ml
test/: dune  mcts_test.ml  rewriting_test.ml  sampling_test.ml
